--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>citizenscience.ch</title>
+
+    <!-- Matomo -->
+    <script type="text/javascript">
+        var _paq = window._paq || [];
+        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function() {
+            var u="https://analytics.citizenscience.ch/";
+            _paq.push(['setTrackerUrl', u+'matomo.php']);
+            _paq.push(['setSiteId', '1']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+            g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+        })();
+    </script>
+    <!-- End Matomo Code -->
+
   </head>
   <body>
     <noscript>
